media/prowlarr/manifest.yaml
---
# Source: homelab/charts/prowlarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    helm.sh/chart: prowlarr-0.1.22
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9696
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
---
# Source: homelab/charts/prowlarr/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    helm.sh/chart: prowlarr-0.1.22
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
      app.kubernetes.io/instance: prowlarr
  template:
    metadata:
      labels:
        helm.sh/chart: prowlarr-0.1.22
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/instance: prowlarr
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: prowlarr
      securityContext:
        {}
      containers:
        - name: prowlarr
          image: "ghcr.io/linuxserver/prowlarr:2.3.5"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-pvc
---
# Source: homelab/charts/prowlarr/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  labels:
    helm.sh/chart: prowlarr-0.1.22
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "prowlarr.ts.kyledev.co"
    - "prowlarr.int.kyledev.co"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ""
        kind: Service
        name: prowlarr
        port: 80
        weight: 1
